tests/suite/snapshots/suite__check__tests__check__bad-var-shadowing1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-var-shadowing1.xi:2:5]
   │
 2 │     foo: int
   ·     ────┬───  
   ·         ╰───── Name already bound in environment
───╯

